Add basic examples to stay consistent with other API documentation

--- a/docs/api/mapml-viewer-api.mdx
+++ b/docs/api/mapml-viewer-api.mdx
@@ -61,7 +61,7 @@ let controlsList = map.controlsList.value;
 
 ### extent
 
-To get the map's extent:
+Read-only. To get the map's extent:
 
 ```js
 let map = document.querySelector('mapml-viewer');
