--- a/i18n/fr/docusaurus-plugin-content-docs/current/api/mapml-viewer-api.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/api/mapml-viewer-api.mdx
@@ -61,7 +61,7 @@ let controlsList = map.controlsList.value;
 
 ### extent
 
-Pour obtenir l’étendue de la carte :
+Lire seulement. Pour obtenir l’étendue de la carte :
 
 ```js
 let map = document.querySelector('mapml-viewer');
