--- a/i18n/fr/docusaurus-plugin-content-docs/current/api/mapml-viewer-api.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/api/mapml-viewer-api.mdx
@@ -583,3 +583,40 @@ let output = map.geojson2mapml(json);
 </details> 
 
 ---
+
+## Spécifications
+
+| Spécification                                                |
+|--------------------------------------------------------------|
+| [HTMLMapmlViewerElement](https://maps4html.org/MapML/spec/#dom-htmlmapmlviewerelement) |
+
+---
+
+## Exigences
+
+[Signaler les problèmes liés à ces exigences sur GitHub](https://github.com/Maps4HTML/HTML-Map-Element-UseCases-Requirements/issues/new?title=-SUMMARIZE+THE+PROBLEM-&body=-DESCRIBE+THE+PROBLEM-)
+
+<p><b><span class="requirement">exigence</span>
+<span class="enhancement">amélioration</span>
+<span class="impractical">peu pratique</span>
+<span class="undecided">indécis</span>
+<span class="discussion">en cours de discussion</span></b></p>
+
+|  | Spéc. | Visualiseur | API |
+|:---------------------------------------------------------------------------------|:------: |:-----: |:---: |
+| [**Propriétés**](#propriétés) | complet | complet | complet |
+| [**Méthodes**](#méthodes) | limité * | complet | limité * |
+
+<details>
+<summary>Exceptions *</summary>
+<ol>
+<li>Aucune spécification ne sera fournie pour les méthodes toggleDebug() ou viewSource().</li>
+<li>La spécification du paramètre <a href="#options">options</a> de la méthode geojson2mapml n'est pas définitive.</li>
+</ol>
+
+</details>
+
+---
+
+> - [Modifier cette page sur **Github**](https://github.com/Maps4HTML/web-map-doc/edit/main/docs/elements/mapml-viewer.md)
+> - [Discutez avec nous sur **Gitter**](https://gitter.im/Maps4HTML/chat)
