Update DomTokenList -> DOMTokenList

--- a/i18n/fr/docusaurus-plugin-content-docs/current/api/mapml-viewer-api.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/api/mapml-viewer-api.mdx
@@ -39,7 +39,7 @@ let controlsAdded = map.controls;
 
 ### controlsList
 
-La propriété `controlsList` renvoie une [DomTokenList](https://developer.mozilla.org/fr/docs/Web/API/DOMTokenList)
+La propriété `controlsList` renvoie une [DOMTokenList](https://developer.mozilla.org/fr/docs/Web/API/DOMTokenList)
 qui aide l'utilisateur à sélectionner les contrôles à afficher sur l'élément `mapml-viewer` en fonction des [valeurs possibles](../elements/mapml-viewer/#controlslist).
 
 Pour définir l’attribut controlslist :
