sync attribute changes of map-extent pr to web-map-doc, including adding full element ending i.e. </map-extent> and also adding missing checked/hidden attributes where applicable

--- a/docs/api/mapml-viewer-api.mdx
+++ b/docs/api/mapml-viewer-api.mdx
@@ -636,7 +636,7 @@ let output = map.geojson2mapml(json);
   <mapml-viewer projection="ATLAS_POLAR_MAP" zoom="2" lat="83.48919" lon="-87.7687" controls>
     <layer- label="Atlas of Canada Polar Wall Map" checked>
     <map-link rel="license" title="Canadian Federal Geospatial Platform" href="https://geoappext.nrcan.gc.ca/arcgis/rest/services/FGP/NCR_RCN/MapServer/"></map-link>
-      <map-extent units="ATLAS_POLAR_MAP">
+      <map-extent units="ATLAS_POLAR_MAP" checked hidden>
         <map-input type="zoom" name="z" min="0" max="6" value="6" ></map-input>
         <map-input type="location" name="x" axis="column" units="tilematrix" min="116" max="186"></map-input>
         <map-input type="location" name="y" axis="row" units="tilematrix" min="125" max="184"></map-input>
