--- a/docs/api/mapml-viewer-api.mdx
+++ b/docs/api/mapml-viewer-api.mdx
@@ -328,7 +328,7 @@ navigator.geolocation.getCurrentPosition(success, error, options);
 
 ---
 
-### locate()
+### locate(options)
 
 Locate the user's location and pan + zoom to it. Fires the `map-locationfound` and/or `map-locationerror` [events](#events) accordingly. See Also - [geolocation control](../elements/mapml-viewer/#controlslist).
 
@@ -336,6 +336,17 @@ Locate the user's location and pan + zoom to it. Fires the `map-locationfound` a
 let map = document.querySelector('mapml-viewer');
 map.locate();
 ```
+
+#### Options
+&ltObject&gt A set of key/value pairs that customize the locate method. All options are optional and detailed below.
+
+| Option | Type | Default | Description |
+|------|------|---------------|--------|
+| `setView` | <Boolean\> | true | if true, pans and zoom to the user's location, or to world view if geolocation failed. |
+| `maxZoom` | <Number\> | 16 | the maximum zoom for view setting when setView option is true. |
+| `timeout` | <Number\> | 10000 | Number of milliseconds to wait for a response from geolocation before firing a locationerror event. |
+| `maximumAge` | <Number\> | 0 | Maximum age of detected location. If less than this amount of milliseconds passed since last geolocation response, locate will return a cached location. |
+| `enableHighAccuracy` | <Boolean\> | false | 	Enables high accuracy, see [description in the W3C spec](https://w3c.github.io/geolocation-api/#enablehighaccuracy-member). |
 
 ---
 
