--- a/i18n/fr/docusaurus-theme-classic/footer.json
+++ b/i18n/fr/docusaurus-theme-classic/footer.json
@@ -45,7 +45,7 @@
   },
   "link.item.label.GitHub": {
     "message": "GitHub",
-    "description": "The label of footer link with label=GitHub linking to https://github.com/Maps4HTML/Web-Map-Custom-Element"
+    "description": "The label of footer link with label=GitHub linking to https://github.com/Maps4HTML/MapML.js"
   },
   "copyright": {
     "message": "Copyright © 2022 Maps4HTML. Construit avec Docusaurus.",
