Rename MapML -> MapML-Specification in files

--- a/docs/api/mapml-viewer-api.mdx
+++ b/docs/api/mapml-viewer-api.mdx
@@ -656,7 +656,7 @@ let output = map.geojson2mapml(json);
 
 | Specification                                                |
 |--------------------------------------------------------------|
-| [HTMLMapmlViewerElement](https://maps4html.org/MapML/spec/#dom-htmlmapmlviewerelement) |
+| [HTMLMapmlViewerElement](https://maps4html.org/MapML-Specification/spec/#dom-htmlmapmlviewerelement) |
 
 ---
 
@@ -679,7 +679,7 @@ let output = map.geojson2mapml(json);
 <summary>Exceptions *</summary>
 <ol>
 <li>No specification will be provided for toggleDebug() or viewSource() methods.</li>
-<li>The defineCustomProjection method is implemented, but <a href="https://github.com/Maps4HTML/MapML/issues/249">not yet specified</a></li>
+<li>The defineCustomProjection method is implemented, but <a href="https://github.com/Maps4HTML/MapML-Specification/issues/249">not yet specified</a></li>
 <li>The custom projections API (defineCustomProjection) is under discussion, in particular, the options parameter's format.</li>
 <li>The geojson2mapml method's <a href="#options">options</a> parameter specification is not final.</li>
 </ol>
