--- a/i18n/fr/docusaurus-plugin-content-docs/current/api/mapml-viewer-api.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/api/mapml-viewer-api.mdx
@@ -656,7 +656,7 @@ let output = map.geojson2mapml(json);
 
 | Spécification                                                |
 |--------------------------------------------------------------|
-| [HTMLMapmlViewerElement](https://maps4html.org/MapML/spec/#dom-htmlmapmlviewerelement) |
+| [HTMLMapmlViewerElement](https://maps4html.org/MapML-Specification/spec/#dom-htmlmapmlviewerelement) |
 
 ---
 
@@ -679,7 +679,7 @@ let output = map.geojson2mapml(json);
 <summary>Exceptions *</summary>
 <ol>
 <li>Aucune spécification ne sera fournie pour les méthodes toggleDebug() ou viewSource().</li>
-<li>La méthode defineCustomProjection est implémentée, mais <a href="https://github.com/Maps4HTML/MapML/issues/249">n'est pas encore spécifiée</a></li>
+<li>La méthode defineCustomProjection est implémentée, mais <a href="https://github.com/Maps4HTML/MapML-Specification/issues/249">n'est pas encore spécifiée</a></li>
 <li>L'API des projections personnalisées (defineCustomProjection) est en cours de discussion, en particulier le format du paramètre options</li>
 <li>La spécification du paramètre <a href="#options">options</a> de la méthode geojson2mapml n'est pas définitive.</li>
 </ol>
